# eigent

./: .env.development  .gitignore  .lintstagedrc.json  CONTRIBUTING.md  README.md  README_CN.md  README_JA.md  README_PT-BR.md  package.json
server/: Dockerfile  cli.py  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 2025_08_11_2107-0001_init_initial_schema.py  2025_09_28_1621-d74ab2a44600_drop_mcp_user_foreign_key_constraint.py  2025_10_15_1446-eec7242b3a9b_modify_chat_history_add_project_id.py  2025_11_13_1731-add_timestamp_to_chat_step.py
server/app/: __init__.py
server/app/component/: auth.py  babel.py  code.py  database.py  encrypt.py  environment.py  oauth_adapter.py  permission.py  sqids.py  stack_auth.py  time_friendly.py
server/app/component/pydantic/: i18n.py
server/app/component/validator/: McpServer.py
server/app/controller/: redirect_controller.py
server/app/controller/chat/: history_controller.py  share_controller.py  snapshot_controller.py  step_controller.py
server/app/controller/config/: config_controller.py
server/app/controller/mcp/: category_controller.py  mcp_controller.py  proxy_controller.py  user_controller.py
server/app/controller/oauth/: oauth_controller.py
server/app/controller/provider/: provider_controller.py
server/app/controller/user/: login_controller.py  user_controller.py  user_password_controller.py
server/app/exception/: exception.py  handler.py
server/app/middleware/: __init__.py
server/app/model/abstract/: model.py
server/app/type/: config_group.py  pydantic.py
(+365 files in other folders)
